firefox scrollbar fix

--- a/src/styles/feature-card.scss
+++ b/src/styles/feature-card.scss
@@ -1,6 +1,6 @@
 @import "./index.scss";
 
-$overlay-opacity: 0.3;
+$overlay-opacity: 0.25;
 $image-width: 450px;
 
 .featured-map-section {
